// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-cabOPr izEZLk"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Admin
      </h1>
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <a
        aria-label="Debug"
        class="sc-hHTYSt dJqYyE sc-ezOQGI dgAItK admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/debug"
      >
        <div
          class="sc-dmctIk dLbmIq"
        >
          <div
            class="sc-kgTSHT kEGyrt"
          />
          <div
            class="sc-fLcnxK eRATcF"
          >
            <div
              aria-hidden="true"
              class="sc-bYMpWt bPVUKW"
            >
              <div
                class="sc-kMjNwy hvofle date container"
              />
              <div
                class="sc-ilhmMj gLYSyF"
              >
                <h1
                  class="sc-gswNZR gzqAHo"
                >
                  Debug
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="sc-hHTYSt dJqYyE sc-ezOQGI dgAItK admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/analytics"
      >
        <div
          class="sc-dmctIk dLbmIq"
        >
          <div
            class="sc-kgTSHT kEGyrt"
          />
          <div
            class="sc-fLcnxK eRATcF"
          >
            <div
              aria-hidden="true"
              class="sc-bYMpWt bPVUKW"
            >
              <div
                class="sc-kMjNwy hvofle date container"
              />
              <div
                class="sc-ilhmMj gLYSyF"
              >
                <h1
                  class="sc-gswNZR gzqAHo"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="sc-hHTYSt dJqYyE sc-ezOQGI dgAItK admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/emails"
      >
        <div
          class="sc-dmctIk dLbmIq"
        >
          <div
            class="sc-kgTSHT kEGyrt"
          />
          <div
            class="sc-fLcnxK eRATcF"
          >
            <div
              aria-hidden="true"
              class="sc-bYMpWt bPVUKW"
            >
              <div
                class="sc-kMjNwy hvofle date container"
              />
              <div
                class="sc-ilhmMj gLYSyF"
              >
                <h1
                  class="sc-gswNZR gzqAHo"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="sc-hHTYSt dJqYyE sc-ezOQGI dgAItK admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/notifications"
      >
        <div
          class="sc-dmctIk dLbmIq"
        >
          <div
            class="sc-kgTSHT kEGyrt"
          />
          <div
            class="sc-fLcnxK eRATcF"
          >
            <div
              aria-hidden="true"
              class="sc-bYMpWt bPVUKW"
            >
              <div
                class="sc-kMjNwy hvofle date container"
              />
              <div
                class="sc-ilhmMj gLYSyF"
              >
                <h1
                  class="sc-gswNZR gzqAHo"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="sc-hHTYSt dJqYyE sc-ezOQGI dgAItK admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 bdqyNM"
        href="/admin/users"
      >
        <div
          class="sc-dmctIk dLbmIq"
        >
          <div
            class="sc-kgTSHT kEGyrt"
          />
          <div
            class="sc-fLcnxK eRATcF"
          >
            <div
              aria-hidden="true"
              class="sc-bYMpWt bPVUKW"
            >
              <div
                class="sc-kMjNwy hvofle date container"
              />
              <div
                class="sc-ilhmMj gLYSyF"
              >
                <h1
                  class="sc-gswNZR gzqAHo"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI hINqGN"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-cabOPr izEZLk"
    width="default"
  >
    <div
      class="sc-ksBlkl gDlyuV"
    >
      <h1
        class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-jcMfQk djCNkC"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-iBYQkv jNlLug"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
